# t32-asm

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  control-flow.md  examples.md  first-program.md  getting-started.md  index.md  instruction-reference.md  subroutines.md  the-language.md  the-machine.md  working-with-data.md
docs/theme/: custom.css  t32-highlight.js
examples/: .gitignore  int2dec.s32  int2hex.s32  pi_spigot_u8.s32  prime_sieve_u8.s32
src/: assembler.cpp  assembler.h  main.cpp  opcodes.h  parser.cpp  parser.h  tokens.h  vm.cpp  vm.h
tests/: e2e_fibo_test.cpp  e2e_hello_test.cpp  e2e_int2dec_test.cpp  e2e_int2hex_test.cpp  e2e_test_harness.cpp  e2e_test_harness.h
tests/cases/: fibo.s32  hello.s32  int2dec.s32  int2hex.s32
vscode/: language-configuration.json  package.json
vscode/syntaxes/: t32.tmLanguage.json
